# agentic_chat

./: .env.example  CODE_REVIEW_FINDINGS.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPER_GUIDE.md  TOKEN_TRACKING.md
mcp-server-tools/: requirements.txt  server.py  verify_tools.py  weather_widget_dark.html  weather_widget_light.html
src/agentic_chatbot/: __init__.py  app.py  main.py
src/agentic_chatbot/api/: __init__.py  dependencies.py  models.py  rate_limit.py  routes.py  sse.py
src/agentic_chatbot/cognition/: __init__.py  config.py  engagement.py  episodic_memory.py  identity.py  meta_monitor.py  models.py  service.py  storage.py  task_queue.py  theory_of_mind.py
src/agentic_chatbot/config/: __init__.py  models.py  prompts.py  settings.py
src/agentic_chatbot/context/: __init__.py  actions.py  assembler.py  memory.py  models.py  requirements.py  results.py  summarizer.py
src/agentic_chatbot/core/: __init__.py  agent_protocol.py  exceptions.py  query_understanding.py  request_context.py  resilience.py  supervisor.py  tool_selector.py  workflow.py  workflow_executor.py
src/agentic_chatbot/data/: __init__.py  content.py  directive.py  execution.py  sourced.py
src/agentic_chatbot/documents/: __init__.py  chunker.py  config.py  models.py  processor.py  service.py  summarizer.py
src/agentic_chatbot/documents/storage/: __init__.py  base.py  local.py
src/agentic_chatbot/events/: __init__.py  bus.py  emitter.py  models.py  types.py
src/agentic_chatbot/flows/: __init__.py  main_flow.py  response_subflow.py  tool_subflow.py  workflow_subflow.py
src/agentic_chatbot/graph/: __init__.py  builder.py  nodes.py  state.py
src/agentic_chatbot/mcp/: __init__.py  callbacks.py  client.py  manager.py  models.py  registry.py  session.py
src/agentic_chatbot/mcp/mock/: __init__.py  server.py  tools.py
src/agentic_chatbot/nodes/: __init__.py  base.py
src/agentic_chatbot/nodes/context/: __init__.py  build_context_node.py  collect_node.py  fetch_tools_node.py  init_node.py
src/agentic_chatbot/operators/: __init__.py  base.py  context.py  registry.py
src/agentic_chatbot/telemetry/: __init__.py  tracing.py
src/agentic_chatbot/tools/: __init__.py  base.py  catalog.py  provider.py  registry.py
src/agentic_chatbot/utils/: __init__.py  llm.py  logging.py  observability.py  structured_llm.py
tests/: __init__.py  conftest.py
tests/integration/: test_mcp_mock.py
tests/unit/: test_callbacks.py  test_context.py  test_events.py  test_operators.py
(+39 files in other folders)
