[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "A ReACT-based supervisor agentic chatbot with MCP integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sse-starlette>=3.0.3",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
agentic-chatbot = "agentic_chatbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
