[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Agentic Chatbot Backend with LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "anthropic>=0.18.0",
    # LangGraph and LangChain
    "langgraph>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint>=2.0.0",
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "sse-starlette>=1.8.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
bedrock = [
    "aioboto3>=12.0.0",
    "boto3>=1.34.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]
all = [
    "agentic-chatbot[bedrock,dev]",
]

[project.scripts]
agentic-chatbot = "agentic_chatbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
